--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ejs": "^2.5.5",
     "express": "^4.10.2",
     "express-session": "^1.14.2",
+    "mongodb": "^2.2.19",
+    "mongoskin": "^2.1.0",
     "morgan": "^1.7.0",
     "request": "^2.74.0",
     "wagner-core": "^0.2.0"
