--- a/bower.json
+++ b/bower.json
@@ -5,28 +5,36 @@
   "homepage": "nepseguide.com",
   "private": true,
   "dependencies": {
-    "angular-jquery": "^0.2.1",
     "angular": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0",
     "bootstrap": "^3.3.4",
-    "jquery": "^3.1.0",
     "font-awesome": "^4.6.3",
     "angular-sanitize": "^1.5.8",
     "angular-material": "^1.1.1",
     "angular-ui-router": "^0.3.2"
   },
   "overrides": {
-    "jquery": {
-      "main": [
-        "dist/"
+    "angular" : {
+      "main" : [
+        "angular.min.js"
       ]
+    },
+    "angular-loader" : {
+      "main" : ["angular-loader.min.js"]
+    },
+    "angular-sanitize" : {
+      "main" : ["angular-sanitize.min.js"]
+    },
+    "angular-material" : {
+      "main" : ["angular-material.min.js","angular-material.min.css"]
+    },
+    "angular-ui-router" : {
+      "main" : ["release/angular-ui-router.min.js"]
     },
     "bootstrap": {
       "main": [
-        "dist/css/bootstrap.min.css",
-        "dist/js/bootstrap.js"
+        "dist/css/bootstrap.min.css"
       ]
     },
     "font-awesome": {
