--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "postinstall": "bower install && gulp build-server"
+    "postinstall": "npm install --dev && bower install && gulp build-server"
   }
 }
