--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "postinstall": "bower install && gulp build-server"
+    "postinstall": "npm install -g gulp && npm install -g bower && bower install && gulp build-server"
   }
 }
