--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "postinstall": "npm install -g gulp && npm install -g bower && bower install && gulp build-server"
+    "postinstall": "bower install && gulp build-server"
   },
   "engines": {
     "node": "6.8.0"
-  },
+  }
 }
