--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
     "angular-material": "^1.1.1",
     "angular-ui-router": "^0.3.2"
   },
+   "resolutions": {
+    "angular": "1.5.8"
+  },
   "overrides": {
     "angular" : {
       "main" : [
