--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "angular": "1.5.8",
+    "angular-animate": "1.5.8",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "bootstrap": "^3.3.4",
